@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title US004 - Domain Model



class Skill{
    name

}

class HRM{

}

class Collaborator{
    name
    admissionDate
    birthDate
    phoneNumber
    email
    idDocType
    idDocNumber
}


HRM "1" -- "*" Collaborator : "assigns skills to >"
Collaborator "1" -- "*" Skill : "has >"

@enduml